1. Modified install.sh to set ~/.blogpost permissions to 700 2. Modified wordpress.conf to emit only <pre> instead of <pre><code> for listings since crayon currently screws up on <pre><code>

--- a/src/blogpost/conf/wordpress.conf
+++ b/src/blogpost/conf/wordpress.conf
@@ -55,3 +55,23 @@ list=<div class="ulist{style? {style}}{role? {role}}"{id? id="{id}"}>{title?<div
 item=<li>|</li>
 text=|
 
+#LG Crayon screws up on <pre><code></code></pre> just emit <pre> and call it a day
+[listingblock]
+<div class="listingblock{role? {role}}{unbreakable-option? unbreakable}"{id? id="{id}"}>
+<div class="title">{caption=}{title}</div>
+<div class="content">
+<pre>
+|
+</pre>
+</div></div>
+
+[literalblock]
+<div class="literalblock{role? {role}}{unbreakable-option? unbreakable}"{id? id="{id}"}>
+<div class="title">{title}</div>
+<div class="content">
+<pre>
+|
+</pre>
+</div></div>
+
+
